--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,9 @@
   "dependencies": {
     "jquery": "~2.0.3",
     "backbone": "~1.1.2",
-    "requirejs": "~2.1.14"
-    "underscore": "~1.6.0"
+    "requirejs": "~2.1.14",
+    "underscore": "~1.6.0",
+    "foundation": "~5.2.3"
   },
   "ignore": [
     "**/.*",
