set up initial part for deploying to Heroku

--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "devDependencies": {
     "request": "^2.34.0",
     "chai": "^1.9.0"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
+
 }
