--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server/basic-server.js",
   "author": "Hack Reactor",
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
-  "dependencies": {},
+  "dependencies": {
+    "express": "~4.4.4"
+  },
   "devDependencies": {
     "request": "^2.34.0",
     "chai": "^1.9.0"
@@ -13,5 +15,4 @@
     "node": "0.8.x",
     "npm": "1.1.x"
   }
-
 }
