--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Hack Reactor",
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
   "dependencies": {
-    "express": "~4.4.4"
+    "express": "~4.4.4",
+    "body-parser": "~1.4.3"
   },
   "devDependencies": {
     "request": "^2.34.0",
