--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-###OSX###
+##OSX###
 
 .DS_Store
 .AppleDouble
@@ -22,9 +22,9 @@ lib-cov
 *.pid
 *.gz
 
-#pids
-#logs
-#results
+pids
+logs
+results
 
 npm-debug.log
 node_modules
