--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
   "dependencies": {
     "express": "~4.4.4",
-    "body-parser": "~1.4.3"
+    "body-parser": "~1.4.3",
+    "bower": "~1.3.5"
   },
   "devDependencies": {
     "request": "^2.34.0",
@@ -15,5 +16,8 @@
   "engines": {
     "node": "0.8.x",
     "npm": "1.1.x"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
